fix code structure
Signed-off-by: lakshyakumar <lakshya.kumar@accenture.com>

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REPOSITORY=
-GIT_URL=
-ROCKET_CHAT=
-GIT_USERNAME=
-GIT_TOKEN=
+REPOSITORY=blockchain-automation-framework
+GIT_URL=https://github.com/hyperledger-labs/blockchain-automation-framework
+ROCKET_CHAT=https://chat.hyperledger.org/channel/blockchain-automation-framework
+GIT_USERNAME=suvajit-sarkar
+GIT_TOKEN=07d54863d347762913337713d540f8a563599f21
